--- a/notes_ai_frontend/pubspec.yaml
+++ b/notes_ai_frontend/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: any
+  flutter_staggered_grid_view: any
 
 
   # The following adds the Cupertino Icons font to your application.
