--- a/notes_ai_frontend/pubspec.yaml
+++ b/notes_ai_frontend/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: "3.1.3"
+  sdk: "3.1.4"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,12 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: any
   flutter_staggered_grid_view: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  json_theme: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/theme.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
