refactor: change google project id

--- a/frontend/macos/firebase_app_id_file.json
+++ b/frontend/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:957321509907:ios:8cd28493be3b2a9b3c53e6",
-  "FIREBASE_PROJECT_ID": "kanjou-sard",
-  "GCM_SENDER_ID": "957321509907"
+  "GOOGLE_APP_ID": "1:333958828802:ios:cf8e7c1e8175f061ef681b",
+  "FIREBASE_PROJECT_ID": "kanjou-app",
+  "GCM_SENDER_ID": "333958828802"
 }
