--- a/frontend/ios/Runner/GoogleService-Info.plist
+++ b/frontend/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.notesAi</string>
+	<string>com.example.kanjou</string>
 	<key>PROJECT_ID</key>
 	<string>kanjou-sard</string>
 	<key>STORAGE_BUCKET</key>
