--- a/frontend/ios/firebase_app_id_file.json
+++ b/frontend/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:957321509907:ios:a73904141ffcd4503c53e6",
-  "FIREBASE_PROJECT_ID": "kanjou-sard",
-  "GCM_SENDER_ID": "957321509907"
+  "GOOGLE_APP_ID": "1:333958828802:ios:ed63eee3cc0c2dfbef681b",
+  "FIREBASE_PROJECT_ID": "kanjou-app",
+  "GCM_SENDER_ID": "333958828802"
 }
