--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   json_theme: ^6.3.0
   firebase_core: ^2.20.0
   cloud_firestore: ^4.12.1
+  sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.0+2
+  provider: ^6.0.5
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_test:
