--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sqflite_common_ffi: ^2.3.0+2
   provider: ^6.0.5
   uuid: ^4.1.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
