--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,7 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   json_theme: ^6.3.0
   firebase_core: ^2.20.0
+  flutter_tesseract_ocr:
   cloud_firestore: ^4.12.1
+  sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.0+2
+  provider: ^6.0.5
+  uuid: ^4.1.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +69,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/theme.json
+      - assets/tessdata_config.json
+      - assets/tessdata/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
