--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   provider: ^6.0.5
   uuid: ^4.1.0
   image_picker: ^1.0.4
+  firebase_auth: ^4.12.1
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
