feat,refactor: save settings to shared_preferences instance, also move note_provider to providers/ and auth to services/

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   speech_to_text: ^6.4.0
   jumping_dot:
   flutter_tts: ^3.8.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
