--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_tts: ^3.8.3
   shared_preferences: ^2.2.2
   http: ^1.1.0
+  connectivity_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
