--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.1.0
   connectivity_plus: ^5.0.1
+  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
   flutter_test:
