--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   http: ^1.1.0
   connectivity_plus: ^5.0.1
   flutter_local_notifications: ^16.1.0
+  flutter_quill: ^8.6.4
 
 dev_dependencies:
   flutter_test:
