--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/theme.json
+      - assets/light.json
       - assets/tessdata_config.json
       - assets/tessdata/
   #   - images/a_dot_burr.jpeg
